add faq and contacts page and fix all problems

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vet clinic</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/main.css">
-    <!-- <link rel="stylesheet" href="css/min.main.css"> -->
+    <!-- <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/main.css"> -->
+    <link rel="stylesheet" href="css/min.main.css">
 </head>
 <body class="body-bg">
     <header>
@@ -72,12 +72,12 @@
                                 </a>
                             </li>
                             <li>
-                                <a class="nav-list__items" href="#">
+                                <a class="nav-list__items" href="faq.html">
                                     FAQ
                                 </a>
                             </li>
                             <li>
-                                <a class="nav-list__items" href="#">
+                                <a class="nav-list__items" href="contacts.html">
                                     Контакты
                                 </a>
                             </li>                                  
@@ -407,12 +407,12 @@
                         </a>
                     </li>
                     <li class="site-footer__links">
-                        <a class="site-footer__links" href="#">
+                        <a class="site-footer__links" href="faq.html">
                             FAQ
                         </a>
                     </li>
                     <li class="site-footer__links">
-                        <a class="site-footer__links" href="#">
+                        <a class="site-footer__links" href="contacts.html">
                             Контакты
                         </a>
                     </li>
