--- a/services.html
+++ b/services.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -72,12 +72,12 @@
                                 </a>
                             </li>
                             <li>
-                                <a class="nav-list__items" href="#">
+                                <a class="nav-list__items" href="faq.html">
                                     FAQ
                                 </a>
                             </li>
                             <li>
-                                <a class="nav-list__items" href="#">
+                                <a class="nav-list__items" href="contacts.html">
                                     Контакты
                                 </a>
                             </li>                                  
@@ -303,12 +303,12 @@
                         </a>
                     </li>
                     <li class="site-footer__links">
-                        <a class="site-footer__links" href="#">
+                        <a class="site-footer__links" href="faq.html">
                             FAQ
                         </a>
                     </li>
                     <li class="site-footer__links">
-                        <a class="site-footer__links" href="#">
+                        <a class="site-footer__links" href="contacts.html">
                             Контакты
                         </a>
                     </li>
@@ -356,45 +356,5 @@
             </span>
         </div>
     </footer>
-
-    <div class="modal">
-        <div class="modal-show">
-            <div class="modal-box">
-                <button class="modal-close-button">
-                    <img src="./images/modal-close.png" width="18" height="18" alt="modal-close-button">    
-                </button>
-                <div class="modal-left-box">
-                    <p class="modal-left-word">
-                        Авторизация:
-                    </p>
-                    <a class="modal-google-button" href="#">
-                        Войти через Google
-                    </a>
-                    <a class="modal-facebook-button" href="#">
-                        Войти через Facebook
-                    </a>
-                </div>
-                <div class="modal-right-box">
-                    <h3 class="modal-title">
-                        Задать вопрос
-                    </h3>
-                    <form action="https://echo.htmlacademy.ru/courses" autocomplete="off" method="post">
-
-                        <input class="modal-input" type="text" minlength="2" maxlength="100" name="user-name" placeholder="Ваше имя" aria-label="Ваше имя" required>
-
-                        <textarea class="modal-input" name="user-commit" minlength="3" cols="30" rows="10" placeholder="Опишите Ваш вопрос." 
-                        aria-label="Опишите Ваш вопрос." required></textarea>
-
-                        <button class="modal-form-button" type="submit">
-                            Отправить 
-                        </button>
-
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-    <script src="./js/main.js"></script>
-
 </body>
 </html>
